--- a/app/templates/travis.yml
+++ b/app/templates/travis.yml
@@ -2,6 +2,7 @@ language: node_js
 node_js:
   - '12'
   - '10'
-  - '8'<% if (codecov) { %>
-after_script:
-  - './node_modules/.bin/nyc report --reporter=text-lcov > coverage.lcov && ./node_modules/.bin/codecov'<% } %>
+  - '8'
+
+notifications: 
+  email: false
